# discord

./: .gitignore  Cargo.toml  README.md  build.sh
assets/: manifest.json
pi/: package.json
pi/src/lib/: ApplicationSettings.svelte  openaction.ts  types.ts
pi/src/lib/assets/: RefreshIcon.svelte
pi/src/routes/: layout.css
pi/src/routes/notification/: +page.svelte
pi/src/routes/notifications/: +page.svelte
pi/src/routes/selectchannel/: +page.svelte
pi/src/routes/setaudiodevice/: +page.svelte
pi/src/routes/simple/: +page.svelte
pi/src/routes/soundboard/: +page.svelte
pi/src/routes/uservolumecontrol/: +page.svelte
pi/src/routes/volumecontrol/: +page.svelte
src/: audio_device_utils.rs  cache.rs  client.rs  main.rs  oauth.rs  rpc_events.rs
src/actions/: action_settings.rs  channel.rs  channel_selection.rs  mod.rs  notification.rs  notifications.rs  screen_share.rs  soundboard.rs  video.rs  voice_settings.rs
src/actions/voice_settings/: audio_device_utils.rs  set_audio_device.rs  user_volume_control.rs  volume_change.rs  volume_control.rs
src/utils/: mod.rs  voice.rs  voice_settings_wrapper.rs
