[package]
name = "oadiscord"
edition = "2024"

[dependencies]
openaction = "2.6"
discord-ipc-rust = { git = "https://github.com/nekename/discord-ipc-rust.git" }

tokio = { version = "1.52", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.13", default-features = false, features = ["native-tls", "form", "json"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

log = "0.4"
simplelog = "0.12"

[profile.release]
lto = "thin"
strip = true
