[package]
name = "oadiscord"
edition = "2024"

[dependencies]
openaction = "2.6"
discord-ipc-rust = { git = "https://github.com/nekename/discord-ipc-rust.git" }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros"] }
log = "0.4"
simplelog = "0.12"
reqwest = { version = "0.13", default-features = false, features = ["native-tls", "form", "json"] }

[profile.release]
strip = true
lto = "thin"
panic = "abort"
